# emerald

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mirror-from-codeberg.yml
src/: lib.rs
src/backend/: README.md  bridge.rs  factory.rs  mod.rs  null.rs
src/backend/ports/: codegen.rs  emitter.rs  mod.rs  optimizer.rs
src/cli/: args.rs  build_system.rs  compiler.rs  error_display.rs  mod.rs  output.rs  progress.rs
src/core/: mod.rs
src/core/ast/: expr.rs  item.rs  mod.rs  stmt.rs  types.rs  visitor.rs
src/core/hir/: expr.rs  item.rs  mod.rs  stmt.rs  symbol.rs  types.rs
src/core/mir/: basic_block.rs  function.rs  instruction.rs  mod.rs  operand.rs
src/core/optimizations/: hir_opt.rs  mir_opt.rs  mod.rs
src/core/types/: composite.rs  dependency.rs  generic.rs  mod.rs  module.rs  pointer.rs  primitive.rs  resolver.rs  size_calculator.rs  ty.rs
src/error/: diagnostic.rs  mod.rs  reporter.rs
src/frontend/lexer/: lexer.rs  token.rs
src/frontend/parser/: grammar.rs  mod.rs  pratt.rs  precedence.rs
src/frontend/semantic/: analyzer.rs  borrow_checker.rs  collector.rs  comptime.rs  ffi.rs  lifetime_checker.rs  mod.rs  module_registry.rs  module_resolver.rs  monomorphizer.rs  resolver.rs  specializer.rs  symbol_table.rs  (+4 more)
src/middle/: hir_lower.rs  mir_lower.rs  mod.rs
src/tests/: bounds_checking_tests.rs  function_tests.rs  hir_tests.rs  lexer_tests.rs  lifetime_tests.rs  mir_tests.rs  mod.rs  module_tests.rs  output_tests.rs  parser_tests.rs  semantic_tests.rs  specialization_tests.rs  syntax_tests.rs  trait_object_tests.rs  type_tests.rs
