[package]
name = "emc"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = "1.0"
codespan = "0.11"
codespan-reporting = "0.11"

# CLI
clap = { version = "4.5", features = ["derive", "color"] }
owo-colors = "4.0"
indicatif = "0.17"
atty = "0.2"

# Utilities
once_cell = "1.19"

[dev-dependencies]
# Testing utilities